<resources
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2"
    xmlns:tools="http://schemas.android.com/tools">
    <string name="app_label">Clock</string>
    <string name="label">Label</string>
    <string name="default_label">Alarm</string>
    <string name="alarm_vibrate">Vibrate</string>
    <string name="alarm_repeat">Repeat</string>
    <string name="delete">Delete</string>
    <string name="default_alarm_ringtone_title">Default alarm sound</string>
    <string name="alarm_sound">Alarm sound</string>
    <string name="timer_sound">Timer sound</string>
    <string name="add_new_sound">Add new</string>
    <string name="remove_sound">Remove</string>
    <string name="confirm_remove_custom_ringtone">Alarms and timers using this sound will play the default sound instead.</string>
    <string name="your_sounds">Your sounds</string>
    <string name="device_sounds">Device sounds</string>
    <string name="custom_ringtone_lost_permissions">The sound content cannot be accessed.</string>
    <string name="default_timer_ringtone_title">Timer Expired</string>
    <string name="alarm_tomorrow">Tomorrow</string>
    <string name="alarm_today">Today</string>
    <string name="alarm_alert_dismiss_text">Dismiss</string>
    <string name="alarm_missed_title">Missed alarm</string>
    <string name="alarm_missed_text"><xliff:g id="alarm_time">%1$s</xliff:g> - <xliff:g id="alarm_label">%2$s</xliff:g></string>
    <string name="alarm_alert_snoozed_text">Snoozed</string>
    <plurals name="alarm_alert_snooze_duration">
        
        <item quantity="one">1 min</item>
        
        <item quantity="other"><xliff:g id="number" example="7">%d</xliff:g> min</item>
    </plurals>
    <string name="alarm_alert_off_text">Alarm off</string>
    <string name="alarm_alert_snooze_text">Snooze</string>
    <plurals name="alarm_alert_snooze_set">
        
        <item quantity="one">Snoozing for 1 minute.</item>
        
        <item quantity="other">Snoozing for <xliff:g id="minutes">%d</xliff:g> minutes.</item>
    </plurals>
    <string name="alarm_alert_snooze_until">Snoozing until <xliff:g id="time">%s</xliff:g></string>
    <string name="alarm_alert_predismiss_title">Upcoming alarm</string>
    <string name="missed_alarm_has_been_deleted">Your missed alarm has been deleted</string>
    <string name="timer_notifications_less_min">Less than a minute remaining</string>
    <string name="timer_notifications_hours"><xliff:g id="HOURS" example="2 hours">%1$s</xliff:g><xliff:g id="REMAINING" example="remaining"> %3$s</xliff:g></string>
    <string name="timer_notifications_minutes"><xliff:g id="MINUTES" example="2 minutes">%2$s</xliff:g><xliff:g id="REMAINING" example="remaining"> %3$s</xliff:g></string>
    <string name="timer_notifications_hours_minutes"><xliff:g id="HOURS" example="2 hours">%1$s</xliff:g><xliff:g id="MINUTES" example="2 minutes"> %2$s</xliff:g> remaining</string>
    <string name="timer_notifications_seconds"><xliff:g id="SECONDS" example="2 seconds">%4$s</xliff:g><xliff:g id="REMAINING" example="remaining"> %3$s</xliff:g></string>
    <string name="timer_notifications_minutes_seconds"><xliff:g id="MINUTES" example="2 minutes">%2$s</xliff:g> <xliff:g id="SECONDS" example="2 seconds"> %4$s</xliff:g><xliff:g id="REMAINING" example="remaining"> %3$s</xliff:g></string>
    <string name="timer_notifications_hours_seconds"><xliff:g id="HOURS" example="2 hours">%1$s</xliff:g> <xliff:g id="SECONDS" example="2 seconds"> %4$s</xliff:g><xliff:g id="REMAINING" example="remaining"> %3$s</xliff:g></string>
    <string name="timer_notifications_hours_minutes_seconds"><xliff:g id="HOURS" example="2 hours">%1$s</xliff:g><xliff:g id="MINUTES" example="2 minutes"> %2$s</xliff:g><xliff:g id="SECONDS" example="2 seconds"> %4$s</xliff:g><xliff:g id="REMAINING" example="remaining"> %3$s</xliff:g></string>
    <string name="timer_accessibility_one_minute_added">One minute added to timer, <xliff:g id="TIME" example="5 hours remaining">%1$s</xliff:g></string>
    <string name="timer_accessibility_stopped">Timer paused, <xliff:g id="TIME" example="5 hours remaining">%1$s</xliff:g></string>
    <string name="timer_accessibility_started">Timer running, <xliff:g id="TIME" example="5 hours remaining">%1$s</xliff:g></string>
    <string name="timer_remaining_single">remaining</string>
    <string name="timer_remaining_multiple">remaining</string>
    <string-array name="alarm_set">
        <item>Alarm set for less than 1 minute from now.</item>
        <item>Alarm set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g> from now.</item>
        <item>Alarm set for <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g> from now.</item>
        <item>Alarm set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g> and <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g> from now.</item>
        <item>Alarm set for <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
        <item>Alarm set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g> and <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
        <item>Alarm set for <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g> and <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
        <item>Alarm set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g>, <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g>, and <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
    </string-array>
    <plurals name="days">
        
        <item quantity="one">1 day</item>
        
        <item quantity="other"><xliff:g id="number" example="7">%s</xliff:g> days</item>
    </plurals>
    <plurals name="hours">
        
        <item quantity="one">1 hour</item>
        
        <item quantity="other"><xliff:g id="number" example="7">%s</xliff:g> hours</item>
    </plurals>
    <plurals name="hours_short">
        
        <item quantity="one">1 hr</item>
        
        <item quantity="other"><xliff:g id="number" example="7">%s</xliff:g> hr</item>
    </plurals>
    <plurals name="minutes">
        
        <item quantity="one">1 minute</item>
        
        <item quantity="other"><xliff:g id="number" example="7">%s</xliff:g> minutes</item>
    </plurals>
    <plurals name="minutes_short">
        
        <item quantity="one">1 min</item>
        
        <item quantity="other"><xliff:g id="number" example="7">%s</xliff:g> min</item>
    </plurals>
    <string name="seconds"><xliff:g id="seconds" example="44">%d</xliff:g></string>
    <string name="every_day">Every day</string>
    <string name="day_concat">", "</string>
    <string name="loading_widget">Loading\u2026</string>
    <string name="analog_gadget">Analog clock</string>
    <string name="digital_gadget">Digital clock</string>
    <string name="settings">Settings</string>
    <string name="snooze_duration_title">Snooze length</string>
    <string name="crescendo_duration_title">Gradually increase volume</string>
    <string name="auto_silence_title">Silence after</string>
    <plurals name="auto_silence_summary">
        
        <item quantity="one">1 minute</item>
        
        <item quantity="other"><xliff:g id="formatted_number" example="7">%s</xliff:g> minutes</item>
    </plurals>
    <string name="auto_silence_never">Never</string>
    <string-array name="auto_silence_entries">
        <item>1 minute</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>20 minutes</item>
        <item>25 minutes</item>
        <item>Never</item>
    </string-array>
    <string-array name="auto_silence_values" translatable="false">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>-1</item> 
    </string-array>
    <string-array name="crescendo_entries">
        <item>Off</item>
        <item>5 seconds</item>
        <item>10 seconds</item>
        <item>15 seconds</item>
        <item>20 seconds</item>
        <item>25 seconds</item>
        <item>30 seconds</item>
        <item>35 seconds</item>
        <item>40 seconds</item>
        <item>45 seconds</item>
        <item>50 seconds</item>
        <item>55 seconds</item>
        <item>60 seconds</item>
    </string-array>
    <string-array name="crescendo_values" translatable="false">
        <item>0</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>45</item>
        <item>50</item>
        <item>55</item>
        <item>60</item>
    </string-array>
    <string-array name="snooze_duration_entries">
        <item>1 minute</item>
        <item>2 minutes</item>
        <item>3 minutes</item>
        <item>4 minutes</item>
        <item>5 minutes</item>
        <item>6 minutes</item>
        <item>7 minutes</item>
        <item>8 minutes</item>
        <item>9 minutes</item>
        <item>10 minutes</item>
        <item>11 minutes</item>
        <item>12 minutes</item>
        <item>13 minutes</item>
        <item>14 minutes</item>
        <item>15 minutes</item>
        <item>16 minutes</item>
        <item>17 minutes</item>
        <item>18 minutes</item>
        <item>19 minutes</item>
        <item>20 minutes</item>
        <item>21 minutes</item>
        <item>22 minutes</item>
        <item>23 minutes</item>
        <item>24 minutes</item>
        <item>25 minutes</item>
        <item>26 minutes</item>
        <item>27 minutes</item>
        <item>28 minutes</item>
        <item>29 minutes</item>
        <item>30 minutes</item>
    </string-array>
    <string-array name="snooze_duration_values" translatable="false">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
    </string-array>
    <string name="week_start_title">Start week on</string>
    <string-array name="week_start_entries">
        <item>Saturday</item>
        <item>Sunday</item>
        <item>Monday</item>
    </string-array>
    <string-array name="week_start_values" translatable="false">
        <item>7</item> 
        <item>1</item> 
        <item>2</item> 
    </string-array>
    <string name="alarm_volume_title">Alarm volume</string>
    <string name="alarm_edit_time">Edit</string>
    <string name="alarm_name">Alarm name</string>
    <string name="alarm_sound_row">Sound</string>
    <string name="alarm_save">Save</string>
    <string name="sw_reset_button">Reset</string>
    <string name="sw_start_button">Start</string>
    <string name="sw_lap_button">Lap</string>
    <string name="laps_previous">Previous laps</string>
    <string name="laps_next">Next laps</string>
    <string name="timer_start">Start</string>
    <string name="timer_delete">Delete</string>
    <string name="timer_setup_preset_1">1 m</string>
    <string name="timer_setup_preset_5">5 m</string>
    <string name="timer_setup_preset_10">10 m</string>
    <string name="timer_setup_preset_15">15 m</string>
    <string name="timer_plus_one">Add 1 Minute</string>
    <string name="timer_add_minute">+ 1:00</string>
    <string name="timer_reset">Reset</string>
    <string name="collapse_alarm">Collapse alarm</string>
</resources>